--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,65 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+.date{
+    margin-left: 10px;  
+    
+}
+.date-btn{
+    margin-left: 2px; 
+    color: aliceblue;
+    background-color: #4a99ad;
+    border: none;
+    padding: 5px;
+    border-radius: 5px;
+    transition: background-color 0.5s ease; /* Geçiş efekti */
+}
+.date-btn:hover {
+    background-color: white; /* Hover durumunda arka plan rengi beyaz olacak */
+    color: #4a99ad; /* Hover durumunda yazı rengi mavi olacak */
+    border:  #4a99ad solid 2px;
+}
+.container h1{
+    text-align: center;
+    color: #4a99ad;
+}
+.apartments-btn:hover{
+    background-color: white; /* Hover durumunda arka plan rengi beyaz olacak */
+    color: #4a99ad; /* Hover durumunda yazı rengi mavi olacak */
+    border:  #4a99ad solid 2px;
+}
+.apartments-btn{
+    color: aliceblue;
+    background-color: #4a99ad;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    transition: background-color 0.5s ease; /* Geçiş efekti */
+}
+.apartments {
+    border: 2px solid rgb(168, 169, 170);
+    margin: 15px;
+    border-radius: 10px;
+    padding: 15px;
+    margin-left: 0;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+.apartments-container {
+    display: flex;
+    align-items: center;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+.apartments img {
+    width: 250px;
+    height: 200px;
+    margin-right: 15px;
+    border-radius: 5px;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.apartments .details {
+    flex-grow: 1;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.apartments p {
+    margin: 5px 0;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.search-input{
+    margin-left: 15px;
 }
